<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifpb.tsi.pdm.emersonraniere.Activities.AddActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/tv_add"
        android:id="@+id/tv_add"
        android:gravity="center"
        android:layout_weight="0.2"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_add_acao"
            android:id="@+id/tv_acao"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addPage_et_action"
            android:layout_marginLeft="40dp"
            android:padding="5dp"
            android:background="@drawable/retangle_shape"
            android:inputType="textCapCharacters|textMultiLine"
            android:maxLines="8"
            android:minLines="8"
            android:maxLength="500"
            android:hint="Máximo de 500 caracteres"
            android:scrollHorizontally="true"
            android:layout_gravity="center"
            android:gravity="top|left" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_add_data"
            android:id="@+id/tv_data" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/retangle_shape"
            android:ems="10"
            android:id="@+id/addPage_et_date"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:padding="5dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_salvar"
            android:id="@+id/btn_add_adicionar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.33" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_cancelar"
            android:id="@+id/btn_add_cancelar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.33" />
    </LinearLayout>


</LinearLayout>
